@@ -22,16 +22,16 @@ import rx.functions.Action1;
 
 /**
  * C3-PRO
- * <p/>
+ *
  * Created by manny Weber on 08/09/2016.
  * Copyright © 2016 University Hospital Zurich. All rights reserved.
- * <p/>
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p/>
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * <p/>
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -80,7 +80,7 @@ public class EligibilityAssessmentStepLayout extends InstructionStepLayout {
          * saves the eligibility in the StepResult when user presses back button or ends the activity.
          * */
         StepResult<Boolean> eligibilityResult = new StepResult<Boolean>(step);
-        eligibilityResult.setResult(new Boolean(((EligibilityAssessmentStep) step).isEligible()));
+        eligibilityResult.setResult(Boolean.valueOf(((EligibilityAssessmentStep) step).isEligible()));
 
         if(((EligibilityAssessmentStep)step).isEligible()){
             callbacks.onSaveStep(StepCallbacks.ACTION_PREV, step, eligibilityResult);
@@ -99,7 +99,7 @@ public class EligibilityAssessmentStepLayout extends InstructionStepLayout {
 
             // StepResult containing eligibility to add when saving step
             final StepResult<Boolean> eligibilityResult = new StepResult<Boolean>(step);
-            eligibilityResult.setResult(new Boolean(((EligibilityAssessmentStep) step).isEligible()));
+            eligibilityResult.setResult(Boolean.valueOf(((EligibilityAssessmentStep) step).isEligible()));
 
             String titleString = ((EligibilityAssessmentStep) step).getNotEligibleTitle();
             String textString = ((EligibilityAssessmentStep) step).getNotEligibleText();
